--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -1,53 +1,113 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
-  <title>Simple Sidebar - Login</title>
-  <!-- Favicon-->
-  <link rel="icon" type="image/x-icon" th:href="@{/assets/favicon.ico}" />
-  <!-- Core theme CSS (includes Bootstrap)-->
-  <link th:href="@{/css/styles.css}" rel="stylesheet" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content />
+    <meta name="author" content />
+    <title>Dibidibidip:::로그인</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" th:href="@{/assets/favicon.ico}" />
+    <!-- Custom Google font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@100;200;300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet" />
+    <!-- Bootstrap icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link th:href="@{/css/styles.css}" rel="stylesheet" />
 </head>
-<body class="align-middle" >
-<div class="container-fluid d-flex justify-content-center" style="height: 100vh">
-
-  <div class="card align-self-center">
-    <div class="card-header">
-      LOGIN Page
+<body class="d-flex flex-column">
+<main class="flex-shrink-0">
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-black py-3">
+        <div class="container px-5">
+            <a class="navbar-brand" href="/home"><span class="fw-bolder text-primary">Dibidibidip</span></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
+                    <li class="nav-item"><a class="nav-link" href="home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/game/main">Create</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/game/enter">Enter</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- Page content-->
+    <section class="py-5">
+        <div class="container px-5">
+            <!-- Contact form-->
+            <div class="bg-white rounded-4 py-5 px-4 px-md-5">
+                <div class="text-center mb-5">
+                    <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 mb-3"><i class="bi bi-envelope"></i></div>
+                    <h1 class="fw-bolder">Login</h1>
+                </div>
+                <div class="row gx-5 justify-content-center">
+                    <div class="col-lg-8 col-xl-6">
+                        <form id="registerForm" action="/member/login" method="post">
+                            <div class="form-floating mb-3">
+                                <input class="form-control" id="id" name="username" type="text" data-sb-validations="required" />
+                                <label for="id">아이디</label>
+                                <div class="invalid-feedback" data-sb-feedback="id:required">아이디를 입력해주세요.</div>
+                            </div>
+                            <!-- Password number input-->
+                            <div class="form-floating mb-3">
+                                <input class="form-control" id="mpw" name="password" type="password" data-sb-validations="required" />
+                                <label for="mpw">비밀번호</label>
+                                <div class="invalid-feedback" data-sb-feedback="mpw:required">비밀번호를 입력해주세요.</div>
+                            </div>
+                            <!-- Submit success message-->
+                            <!---->
+                            <!-- This is what your users will see when the form-->
+                            <!-- has successfully submitted-->
+                            <div class="d-none" id="submitSuccessMessage">
+                                <div class="text-center mb-3">
+                                    <div class="fw-bolder">Form submission successful!</div>
+                                    To activate this form, sign up at
+                                    <br />
+                                    <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
+                                </div>
+                            </div>
+                            <!-- Submit error message-->
+                            <!---->
+                            <!-- This is what your users will see when there is-->
+                            <!-- an error submitting the form-->
+                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
+                            <!-- Submit Button-->
+                            <div class="d-grid">
+                                <button class="btn btn-primary btn-lg" id="submitButton" type="submit">로그인</button>
+                                <button class="btn btn-warning btn-lg" onclick="location.href='/oauth2/authorization/kakao'">KAKAO 로그인</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
+<!-- Footer-->
+<footer class="bg-black py-4 mt-auto">
+    <div class="container px-5">
+        <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+            <div class="col-auto"><div class="small m-0 text-light">Copyright &copy;Dibidibidip 2023</div></div>
+            <div class="col-auto">
+                <a class="small" href="#!">Privacy</a>
+                <span class="mx-1">&middot;</span>
+                <a class="small" href="#!">Terms</a>
+                <span class="mx-1">&middot;</span>
+                <a class="small" href="#!">Contact</a>
+            </div>
+        </div>
     </div>
-    <div class="card-body">
-      <th:block th:if="${param.logout != null}">
-        <h1>Logout........</h1>
-      </th:block>
-
-      <form id="registerForm" action="/member/login" method="post">
-        <div class="input-group mb-3">
-          <span class="input-group-text">아이디</span>
-          <input type="text" name="username" class="form-control" placeholder="USER ID">
-        </div>
-        <div class="input-group mb-3">
-          <span class="input-group-text">패스워드</span>
-          <input type="text" name="password" class="form-control" placeholder="PASSWORD">
-        </div>
-        <div class="input-group mb-3 ">
-          <input class="form-check-input" type="checkbox" name="remember-me">
-          <label class="form-check-label">
-            자동 로그인
-          </label>
-        </div>
-        <div class="my-4">
-          <div class="float-end">
-            <button type="submit" class="btn btn-primary submitBtn">LOGIN</button>
-          </div>
-        </div>
-      </form>
-      <a href="/oauth2/authorization/kakao">KAKAO</a>
-    </div><!--end card body-->
-  </div><!--end card-->
-</div>
+</footer>
+<!-- Bootstrap core JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Core theme JS-->
+<script src="js/scripts.js"></script>
+<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+<!-- * *                               SB Forms JS                               * *-->
+<!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
+<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+<script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
 </html>
