--- a/src/main/resources/templates/game/1.html
+++ b/src/main/resources/templates/game/1.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Games</title>
+        <title>Dibidibidip:::동작따라하기</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" th:href="@{/assets/favicon.ico}" />
         <!-- Custom Google font-->
@@ -16,6 +16,19 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link th:href="@{/css/styles.css}" rel="stylesheet" />
+        <!-- Posenet -->
+        <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.11.0/dist/tf.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/posenet@2.2.2/dist/posenet.min.js"></script>
+
+        <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-core@3.11.0/dist/tf-core.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-converter@3.11.0/dist/tf-converter.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-webgl@3.11.0/dist/tf-backend-webgl.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/pose-detection@0.0.6/dist/pose-detection.min.js"></script>
+        <style>
+            canvas {
+                position: absolute;
+            }
+        </style>
     </head>
     <body class="d-flex flex-column h-100 bg-black">
         <main class="flex-shrink-0">
@@ -37,43 +50,25 @@
             <section class="py-5">
                 <div class="container px-5 mb-5">
                     <div class="text-center mb-5">
-                        <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Games</span></h1>
+                        <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">동작 따라하기</span></h1>
                     </div>
                     <div class="row gx-5 justify-content-center">
-                        <div class="col-lg-11 col-xl-9 col-xxl-8">
+                        <div class="col">
                             <!-- Project Card 1-->
                             <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
-                                <h5 class="card-header">Room Info</h5>
+                                <h5 class="card-header">You</h5>
                                 <div class="card-body p-0">
-                                    <div class="d-flex align-items-center">
-                                        <div class="p-5">
-                                            <h2 class="fw-bolder">Room Info</h2>
-                                        </div>
-                                    </div>
+                                    <video id="video" autoplay muted playsinline></video>
+                                    <canvas class="offcanvas" id="canvas"></canvas>
                                 </div>
                             </div>
+                        </div>
+                        <div class="col">
                             <!-- Project Card 2-->
                             <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
-                                <h5 class="card-header">Players</h5>
+                                <h5 class="card-header">따라해보세요</h5>
                                 <div class="card-body p-0">
-                                    <ul class="list-group list-group-flush">
-                                        <li class="list-group-item">player1</li>
-                                        <li class="list-group-item">player2</li>
-                                        <li class="list-group-item">player3</li>
-                                        <li class="list-group-item">player4</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <!-- Project Card 3-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0">
-                                <h5 class="card-header">Games</h5>
-                                <div class="card-body p-0">
-                                    <ul class="list-group list-group-flush">
-                                        <li class="list-group-item" onclick="location.href='1'">동작 따라하기</li>
-                                        <li class="list-group-item">표정 따라하기</li>
-                                        <li class="list-group-item">디비디비딥</li>
-                                        <li class="list-group-item">가위바위보</li>
-                                    </ul>
+                                    hello
                                 </div>
                             </div>
                         </div>
@@ -99,6 +94,8 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script th:src="@{/js/scripts.js}"></script>
+        <script th:src="@{/js/posenet.js}"></script>
+        </script>
     </body>
 </html>
