--- a/src/main/resources/templates/game/1.html
+++ b/src/main/resources/templates/game/1.html
@@ -16,7 +16,54 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link th:href="@{/css/styles.css}" rel="stylesheet" />
-
+        <style>
+            .card{
+                --bs-card-bg: var(--bs-indigo);
+                #opacity: 60%;
+                width: 300px;
+                height: 200px;
+                color: white;
+            }
+            .card h5{
+                margin: 0;
+                position: absolute;
+                top: 10%;
+                left: 10%;
+            }
+            .card h1{
+                margin-top: 26%;
+                text-align: center;
+                display: inline-block;
+                vertical-align: middle;
+            }
+            #sound{
+                margin: 0;
+                position: absolute;
+                right: 9%;
+                width: 50px;
+                height: 50px;
+                cursor: pointer;
+            }
+            #last{
+                width: 100%;
+                height: 50%;
+                color: var(--bs-yellow);
+                font-size: 5.5em;
+                font-weight: bold;
+                text-shadow: -1px 0 #fff, 0 1px #fff, 1px 0 #fff, 0 -1px #fff;
+                text-align: center;
+                position: absolute;
+                top: 30%;
+                z-index: 1;
+            }
+            #last p{
+                margin: 0;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+            }
+        </style>
     </head>
     <body class="d-flex flex-column h-100 bg-black">
         <main class="flex-shrink-0">
@@ -36,23 +83,38 @@
             </nav>
             <!-- Projects Section-->
             <section class="py-5">
-                <div class="container px-5 mb-5">
+                <div id="last"></div>
+                <div class="container px-5 mb-3">
                     <div class="text-center mb-5">
                         <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">동작 따라하기</span></h1>
                     </div>
-                    <div class="row">
-                        <div class="col mb-2">
-                            <h3>점수 : <span id="score">0</span></h3>
-                        </div>
-                    </div>
                     <div class="row gx-5 justify-content-center">
-                        <div class="col-auto mb-4">
+                        <div class="col-auto mb-2">
+                            <h5 class="text-center" style="color: white">🔮&nbsp;P&nbsp;O&nbsp;S&nbsp;E</h5>
+                            <img id="img" th:src="${imgUrl}" style="width: 400px; height: 480px;">
+                            <input th:type="hidden" id="title" th:value="${title}">
+                        </div>
+                        <div class="col-auto mb-2">
+                            <!--
                             <video id="videoInput" style="display:none"></video>
                             <canvas id="videoOutput"></canvas>
+                            -->
+                            <h5 class="text-center" style="color: white">📷&nbsp;&nbsp;Y&nbsp;O&nbsp;U</h5>
+                            <img th:src="${imgUrl}" style="width: 400px; height: 480px;">
                         </div>
-                        <div class="col-auto mb-4">
-                            <img id="img" th:src="${imgUrl}" style="width: 320px; height: 240px;">
-                            <input th:type="hidden" id="title" th:value="${title}">
+                        <div class="col-auto mb-2">
+                            <h5 class="text-center" style="color: white;">P&nbsp;R&nbsp;O&nbsp;G&nbsp;R&nbsp;E&nbsp;S&nbsp;S</h5>
+                            <div class="card mb-2">
+                                <h5>score</h5>
+                                <h1><span id="score">0</span>점</h1>
+                            </div>
+                            <div class="card mb-3">
+                                <h5>time</h5>
+                                <h1><span id="time"></span></h1>
+                            </div>
+                            <div class="card" style="background: none;">
+                                <img id="sound" src="/assets/btn/sound.png" onclick="playAudio();">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -83,7 +145,7 @@
             let score = 0;
 
             <!-- 카메라 크기 -->
-            var w = 320, h = 240;
+            var w = 400, h = 1000;
 
             <!-- 웹소켓 연결 -->
             var url = "ws://localhost:1111"
@@ -109,7 +171,7 @@
                     console.log("equals");
 
                     $.ajax({
-                        url: "/ajax",
+                        url: "/game/ajax",
                         type: "POST",
                         success: function (data) {
                             console.log("success");
@@ -166,8 +228,34 @@
             }
 
             stream();
+        </script>
+        <script>
+            function playAudio(){
+                var audio = new Audio('/assets/bgm/fast.mp3');
+                audio.play();
+            }
 
+            var time = 10;
 
+            var x = setInterval(function (){
+                document.getElementById("time").innerHTML = time + "초";
+
+                if(time<=5){
+                    document.getElementById("time").innerHTML
+                        = "<p style='color: red'>" +
+                        time + "초" +
+                        "</p>"
+                    ;
+                }
+
+                if(time<=0){
+                    clearInterval(x);
+                    document.getElementById("last").innerHTML
+                        = "<p>G A M E  O V E R</p>";
+                }
+
+                time--;
+            }, 1000);
         </script>
     </body>
 </html>
