--- a/src/main/resources/templates/game/main.html
+++ b/src/main/resources/templates/game/main.html
@@ -16,6 +16,36 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link th:href="@{/css/styles.css}" rel="stylesheet" />
+        <style>
+            .pic{
+                font-size: 2.5em;
+                width: 20%;
+                text-align: right;
+            }
+            .mid{
+                width: 10%;
+            }
+            .title:hover {
+                background-color: darkviolet;
+                cursor: pointer;
+            }
+            .title{
+                font-size: 1.25em;
+                border: 1px solid white;
+            }
+            table {
+                margin-top: 5%;
+                margin-left:auto;
+                margin-right:auto;
+                color: #fff;
+                width: 65%;
+                text-align: center;
+                border-collapse: separate;
+            }
+            td{
+                border-radius: 10px;
+            }
+        </style>
     </head>
     <body class="d-flex flex-column h-100 bg-black">
         <main class="flex-shrink-0">
@@ -39,44 +69,23 @@
                     <div class="text-center mb-5">
                         <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Games</span></h1>
                     </div>
-                    <div class="row gx-5 justify-content-center">
-                        <div class="col-lg-11 col-xl-9 col-xxl-8">
-                            <!-- Project Card 1-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
-                                <h5 class="card-header">Room Info</h5>
-                                <div class="card-body p-0">
-                                    <div class="d-flex align-items-center">
-                                        <div class="p-5">
-                                            <h2 class="fw-bolder">Room Info</h2>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Project Card 2-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
-                                <h5 class="card-header">Players</h5>
-                                <div class="card-body p-0">
-                                    <ul class="list-group list-group-flush">
-                                        <li class="list-group-item">player1</li>
-                                        <li class="list-group-item">player2</li>
-                                        <li class="list-group-item">player3</li>
-                                        <li class="list-group-item">player4</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <!-- Project Card 3-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0">
-                                <h5 class="card-header">Games</h5>
-                                <div class="card-body p-0">
-                                    <ul class="list-group list-group-flush">
-                                        <li class="list-group-item" onclick="location.href='1'">동작 따라하기</li>
-                                        <li class="list-group-item">표정 따라하기</li>
-                                        <li class="list-group-item">디비디비딥</li>
-                                        <li class="list-group-item">가위바위보</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="gx-5 justify-content-center">
+                        <table>
+                            <tr>
+                                <td class="pic">☠️</td>
+                                <td class="mid"></td>
+                                <td class="title" onclick="location.href='1'">동작 따라하기</td>
+                                <td class="mid"></td>
+                            </tr>
+                        </table>
+                        <table>
+                            <tr>
+                                <td class="pic">☠️</td>
+                                <td class="mid"></td>
+                                <td class="title">표정 따라하기</td>
+                                <td class="mid"></td>
+                            </tr>
+                        </table>
                     </div>
                 </div>
             </section>
