--- a/src/main/resources/templates/game/main.html
+++ b/src/main/resources/templates/game/main.html
@@ -82,7 +82,7 @@
                             <tr>
                                 <td class="pic">☠️</td>
                                 <td class="mid"></td>
-                                <td class="title">표정 따라하기</td>
+                                <td class="title" onclick="location.href='2'">표정 따라하기</td>
                                 <td class="mid"></td>
                             </tr>
                         </table>
@@ -108,6 +108,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script type="application/xml" src="js/scripts.js"></script>
     </body>
 </html>
