--- a/src/main/resources/templates/game/test.html
+++ b/src/main/resources/templates/game/test.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-  <span id="demo"></span>
+  <button type="button" class="btn-primary" onclick="send();">AJAX SEND</button>
+  <img id="img" src="/assets/profile.png" style="width: 350px; height: 350px;">
+  <div id="title">title</div>
+  <span id="score">score</span>
 </body>
 <script>
-  var time = 5;
+  function send(){
+      $.ajax({
+          url: "/game/ajax",
+          type: "POST",
+          success: function (data) {
+              console.log("success");
 
-  var x = setInterval(function (){
-    document.getElementById("demo").innerHTML = time + "초";
-    time--;
-
-    if(time<0){
-      clearInterval(x);
-      document.getElementById("demo").innerHTML = "시간초과";
-    }
-  }, 1000);
+              // 다음 이미지로 바꾸고 title과 score 정보 업데이트
+              document.getElementById("img").src = data.imgUrl;
+              document.getElementById("title").value = data.title;
+              score += 10;
+              $("#score").text(score);
+          },
+          error: function (error) {
+              console.log("error")
+              console.error(error);
+          }
+      });
+  }
 </script>
 </html>
