--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="row gx-5 justify-content-center">
                     <div class="col-lg-8 col-xl-6">
-                        <form id="loginForm needs-validation" action="/member/login" method="post" novalidate>
+                        <form id="loginForm" class="needs-validation" action="/member/login" method="post" novalidate>
                             <div class="form-floating mb-3">
                                 <input class="form-control" id="id" name="username" type="text" required />
                                 <label for="id">아이디</label>
