--- a/src/main/resources/templates/member/join.html
+++ b/src/main/resources/templates/member/join.html
@@ -44,7 +44,7 @@
                         </div>
                         <div class="row gx-5 justify-content-center">
                             <div class="col-lg-8 col-xl-6">
-                                <form id="registerForm needs-validation" action="/member/join" method="post" novalidate>
+                                <form id="registerForm" class="needs-validation" action="/member/join" method="post" novalidate>
                                     <div class="form-floating mb-3">
                                         <input class="form-control" id="id" name="mid" type="text" required />
                                         <label for="id">아이디</label>
@@ -62,11 +62,11 @@
                                         <label for="mpw">비밀번호</label>
                                         <div class="invalid-feedback" >비밀번호를 입력해주세요.</div>
                                     </div>
-                                    <div class="form-floating mb-3">
+                                    <!--div class="form-floating mb-3">
                                         <input class="form-control" id="mpw2" type="password" required />
                                         <label for="mpw2">비밀번호 재확인</label>
                                         <div class="invalid-feedback" >비밀번호를 입력해주세요.</div>
-                                    </div>
+                                    </div-->
                                     <!-- Submit Button-->
                                     <div class="d-grid"><button class="btn btn-primary btn-lg" id="submitButton" type="submit">가입하기</button></div>
                                 </form>
