--- a/src/main/resources/templates/game/1.html
+++ b/src/main/resources/templates/game/1.html
@@ -50,7 +50,7 @@
                 color: var(--bs-yellow);
                 font-size: 5.5em;
                 font-weight: bold;
-                text-shadow: -1px 0 #fff, 0 1px #fff, 1px 0 #fff, 0 -1px #fff;
+                text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
                 text-align: center;
                 position: absolute;
                 top: 30%;
@@ -68,25 +68,13 @@
     <body class="d-flex flex-column h-100 bg-black">
         <main class="flex-shrink-0">
             <!-- Navigation-->
-            <nav class="navbar navbar-expand-lg navbar-light bg-black py-3">
-                <div class="container px-5">
-                    <a class="navbar-brand" href="/home"><span class="fw-bolder text-primary">Dibidibidip</span></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                            <li class="nav-item"><a class="nav-link" href="/home">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/game/main">Create</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/game/enter">Enter</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
+            <div id="nav-load" th:replace="~{layout/header :: navFragment}"></div>
             <!-- Projects Section-->
             <section class="py-5">
                 <div id="last"></div>
                 <div class="container px-5 mb-3">
                     <div class="text-center mb-5">
-                        <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">동작 따라하기</span></h1>
+                        <h1 class="display-5 fw-bolder mb-1"><span class="text-gradient d-inline">동작 따라하기</span></h1>
                     </div>
                     <div class="row gx-5 justify-content-center">
                         <div class="col-auto mb-2">
@@ -118,6 +106,11 @@
                         </div>
                     </div>
                 </div>
+                <form id="scoreForm" method="GET" action="/game/result">
+                    <input type="hidden" name="mid" th:value="${gameInfo.mid}">
+                    <input type="hidden" name="gname" th:value="${gameInfo.gname}">
+                    <input type="hidden" name="score" id="result">
+                </form>
             </section>
         </main>
         <!-- Footer-->
@@ -227,7 +220,7 @@
                 ws.send(rawData);
             }
 
-            stream();
+            //stream();
         </script>
         <script>
             function playAudio(){
@@ -235,8 +228,7 @@
                 audio.play();
             }
 
-            var time = 10;
-
+            var time = 3;
             var x = setInterval(function (){
                 document.getElementById("time").innerHTML = time + "초";
 
@@ -252,8 +244,11 @@
                     clearInterval(x);
                     document.getElementById("last").innerHTML
                         = "<p>G A M E  O V E R</p>";
+                    setTimeout(function (){
+                        document.getElementById("result").value = score;
+                        $("#scoreForm").submit();
+                    }, 1000);
                 }
-
                 time--;
             }, 1000);
         </script>
