--- a/src/main/resources/templates/game/face.html
+++ b/src/main/resources/templates/game/face.html
@@ -7,7 +7,6 @@
         <meta name="author" content="" />
         <title>Dibidibidip:::표정따라하기</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" th:href="@{/assets/favicon.ico}" />
         <!-- Custom Google font-->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -46,14 +45,14 @@
             }
             #last{
                 width: 100%;
-                height: 50%;
+                height: 30%;
                 color: var(--bs-yellow);
                 font-size: 5.5em;
                 font-weight: bold;
-                text-shadow: -1px 0 #fff, 0 1px #fff, 1px 0 #fff, 0 -1px #fff;
+                text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
                 text-align: center;
                 position: absolute;
-                top: 30%;
+                top: 40%;
                 z-index: 1;
             }
             #last p{
@@ -63,24 +62,24 @@
                 left: 50%;
                 transform: translate(-50%, -50%);
             }
+            #success{
+                font-weight: bold;
+                text-align:center;
+                z-index: 2;
+                position:absolute;
+                color:#16FF00;
+                top: 50%;
+                left:50%;
+                width:100%;
+                transform:translate(-50%,-50%);
+                text-shadow: -1px 0 #fff, 0 1px #fff, 1px 0 #fff, 0 -1px #fff;
+            }
         </style>
     </head>
     <body class="d-flex flex-column h-100 bg-black">
         <main class="flex-shrink-0">
             <!-- Navigation-->
-            <nav class="navbar navbar-expand-lg navbar-light bg-black py-3">
-                <div class="container px-5">
-                    <a class="navbar-brand" href="/home"><span class="fw-bolder text-primary">Dibidibidip</span></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                            <li class="nav-item"><a class="nav-link" href="/home">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/game/main">Create</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/game/enter">Enter</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
+            <div id="nav-load" th:replace="~{layout/header :: navFragment}"></div>
             <!-- Projects Section-->
             <section class="py-5">
                 <div id="last"></div>
@@ -91,7 +90,9 @@
                     <div class="row gx-5 justify-content-center">
                         <div class="col-auto mb-2">
                             <h5 class="text-center" style="color: white">🔮&nbsp;P&nbsp;O&nbsp;S&nbsp;E</h5>
-                            <img id="img" th:src="${imgUrl}" style="width: 350px; height: 350px;">
+                            <div style="position: relative">
+                                <img id="img" th:src="${imgUrl}" style="width: 350px; height: 350px;">
+                            </div>
                             <input th:type="hidden" id="title" th:value="${title}">
                         </div>
                         <div class="col-auto mb-2">
@@ -118,6 +119,11 @@
                         </div>
                     </div>
                 </div>
+                <form id="scoreForm" method="GET" action="/game/result">
+                    <input type="hidden" name="mid" th:value="${gameInfo.mid}">
+                    <input type="hidden" name="gname" th:value="${gameInfo.gname}">
+                    <input type="hidden" name="score" id="result">
+                </form>
             </section>
         </main>
         <!-- Footer-->
@@ -148,10 +154,12 @@
             var w = 350, h = 350;
 
             <!-- 웹소켓 연결 -->
-            var url = "ws://localhost:1111"
+            //var url = "ws://localhost:1111"
+            var url = "ws://13.59.44.233:9999"
             var ws = new WebSocket(url);
             ws.onopen = function(){
                 console.log("Websocket is connected.");
+                stream();
             }
 
             <!-- 이미지 일치 확인 -->
@@ -164,6 +172,7 @@
                 // 현재 그림의 타이틀
                 /*<![CDATA[*/
                 var now = [[${title}]];
+                var gname = [[${gameInfo.gname}]];
                 /*]]>*/
 
                 // 만약 파이썬 메시지와 그림 타이틀이 같으면 ajax 실행
@@ -176,9 +185,14 @@
                         success: function (data) {
                             console.log("success");
 
-                            // 다음 이미지로 바꾸고 title과 score 정보 업데이트
-                            document.getElementById("img").src = data.imgUrl;
-                            document.getElementById("title").value = data.title;
+                            $('#img').after('<h1 id="success">S&nbsp;U&nbsp;C&nbsp;C&nbsp;E&nbsp;S&nbsp;S&nbsp;😆</h1>');
+                            setTimeout(function (){
+                                $("#success").remove();
+                                // 다음 이미지로 바꾸고 title과 score 정보 업데이트
+                                document.getElementById("img").src = data.imgUrl;
+                                document.getElementById("title").value = data.title;
+                            }, 500);
+
                             score += 10;
                             $("#score").text(score);
                         },
@@ -227,15 +241,17 @@
                 ws.send(rawData);
             }
 
-            stream();
+            //stream();
+
         </script>
         <script>
             function playAudio(){
+                console.log("audio");
                 var audio = new Audio('/assets/bgm/fast.mp3');
                 audio.play();
             }
 
-            var time = 10;
+            var time = 3;
 
             var x = setInterval(function (){
                 document.getElementById("time").innerHTML = time + "초";
@@ -252,8 +268,16 @@
                     clearInterval(x);
                     document.getElementById("last").innerHTML
                         = "<p>G A M E  O V E R</p>";
-                }
 
+                    $("#last").css({
+                        "background" : "rgba(0,0,0,0.5)"
+                    });
+
+                    setTimeout(function (){
+                        document.getElementById("result").value = score;
+                        $("#scoreForm").submit();
+                    }, 2000);
+                }
                 time--;
             }, 1000);
         </script>
