--- a/src/main/resources/templates/game/main.html
+++ b/src/main/resources/templates/game/main.html
@@ -50,19 +50,7 @@
     <body class="d-flex flex-column h-100 bg-black">
         <main class="flex-shrink-0">
             <!-- Navigation-->
-            <nav class="navbar navbar-expand-lg navbar-light bg-black py-3">
-                <div class="container px-5">
-                    <a class="navbar-brand" href="/home"><span class="fw-bolder text-primary">Dibidibidip</span></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                            <li class="nav-item"><a class="nav-link" href="/home">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/game/main">Create</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/game/enter">Enter</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
+            <div id="nav-load" th:replace="~{layout/header :: navFragment}"></div>
             <!-- Projects Section-->
             <section class="py-5">
                 <div class="container px-5 mb-5">
@@ -74,7 +62,7 @@
                             <tr>
                                 <td class="pic">☠️</td>
                                 <td class="mid"></td>
-                                <td class="title" onclick="location.href='1'">동작 따라하기</td>
+                                <td class="title" onclick="location.href='pose'">동작 따라하기</td>
                                 <td class="mid"></td>
                             </tr>
                         </table>
@@ -82,7 +70,7 @@
                             <tr>
                                 <td class="pic">☠️</td>
                                 <td class="mid"></td>
-                                <td class="title" onclick="location.href='2'">표정 따라하기</td>
+                                <td class="title" onclick="location.href='face'">표정 따라하기</td>
                                 <td class="mid"></td>
                             </tr>
                         </table>
