kakao login 버튼 숨김

--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -46,8 +46,7 @@
                             <!-- Submit Button-->
                             <div class="d-grid">
                                 <button class="btn btn-primary btn-lg" id="submitButton" type="submit">로그인</button>
-                                <button class="btn btn-warning btn-lg"><a href="/oauth2/authorization/kakao" style="text-decoration: none;color: white">KAKAO 로그인</a></button>
-
+                                <!--button-- class="btn btn-warning btn-lg"><a href="/oauth2/authorization/kakao" style="text-decoration: none;color: white">KAKAO 로그인</a></button-->
                             </div>
                         </form>
                     </div>
