게임 점수 수정

--- a/src/main/resources/templates/game/pose.html
+++ b/src/main/resources/templates/game/pose.html
@@ -146,176 +146,17 @@
 <!-- Core theme JS-->
 <script th:src="@{/js/scripts.js}"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-<script th:inline="javascript">
-    <!-- 유저 점수 -->
-    let score = 0;
-
+<script>
     <!-- 카메라 크기 -->
     var w = 400, h = 480;
 
-    <!-- 웹소켓 연결 -->
-    //var url = "ws://localhost:1111"
-    var url = "ws://13.59.44.233:9999"
-    var ws = new WebSocket(url);
-    ws.onopen = function(){
-        console.log("Websocket is connected.");
+    // 현재 그림의 타이틀
+    /*<![CDATA[*/
+    var now = [[${title}]];
+    var gname = [[${gameInfo.gname}]];
+    /*]]>*/
 
-        stream();
-    }
-
-    <!-- 이미지 일치 확인 -->
-    ws.onmessage = function(msg){
-
-        // 파이썬에서 보내주는 메세지
-        var classification = msg.data;
-        console.log(classification);
-
-        // 현재 그림의 타이틀
-        /*<![CDATA[*/
-        var now = [[${title}]];
-        var gname = [[${gameInfo.gname}]];
-        /*]]>*/
-
-        // 만약 파이썬 메시지와 그림 타이틀이 같으면 ajax 실행
-        if(classification === now){
-            console.log("equals");
-
-            $.ajax({
-                url: "/game/ajax",
-                type: "POST",
-                data: {"gname" : gname},
-                success: function (data) {
-                    console.log("success");
-
-                    $('#img').after('<h1 id="success">S&nbsp;U&nbsp;C&nbsp;C&nbsp;E&nbsp;S&nbsp;S&nbsp;😆</h1>');
-                    setTimeout(function (){
-                        $("#success").remove();
-                        // 다음 이미지로 바꾸고 title과 score 정보 업데이트
-                        document.getElementById("img").src = data.imgUrl;
-                        document.getElementById("title").value = data.title;
-                    }, 500);
-
-                    score += 10;
-                    $("#score").text(score);
-                },
-                error: function (error) {
-                    console.log("error")
-                    console.error(error);
-                }
-            });
-        }
-
-    }
-
-
-    // legacy가 있는 브라우저에서의 사용을 위해
-    /*
-    navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
-
-    var constraints = {audio: false, video: true};
-    var video = document.getElementById("videoInput");
-
-    video.width = w;
-    video.height = h;
-
-    function successCallback(stream){
-        video.srcObject = stream;
-        video.play();
-    }
-
-    function errorCallback(error){
-        console.log(error);
-    }
-    navigator.getUserMedia(constraints, successCallback, errorCallback);
-     */
-
-    var constraints = { audio: false, video: { width: w, height: h } };
-    var video = document.querySelector('video');
-
-    navigator.mediaDevices.getUserMedia(constraints)
-        .then(function(stream) {
-
-            // Older browsers may not have srcObject
-            if ("srcObject" in video) {
-                video.srcObject = stream;
-            } else {
-                // Avoid using this in new browsers, as it is going away.
-                video.src = window.URL.createObjectURL(stream);
-            }
-            video.onloadedmetadata = function(e) {
-                video.play();
-            };
-        })
-        .catch(function(err) {
-            console.log(err.name + ": " + err.message);
-        });
-
-
-
-    var canvas = document.getElementById("videoOutput");
-    canvas.width = w;
-    canvas.height = h;
-    var ctx = canvas.getContext("2d");
-    function processImage(){
-        ctx.drawImage(video, 0, 0, w, h);
-        setTimeout(processImage, 1);
-    }
-    processImage();
-
-    function stream(){
-        setInterval(sendImage, 30);
-    }
-
-    function sendImage(){
-        var rawData = canvas.toDataURL("image/jpeg", 0.5);
-        ws.send(rawData);
-    }
-
-
-    // BGM
-    function playAudio(){
-        console.log("audio");
-        var audio = new Audio('/assets/bgm/fast.mp3');
-        audio.play();
-    }
-
-
-    // game timeout 설정
-    var time = 3;
-
-    var x = setInterval(function (){
-        document.getElementById("time").innerHTML = time + "초";
-
-        if(time<=5){
-            document.getElementById("time").innerHTML
-                = "<p style='color: red'>" +
-                time + "초" +
-                "</p>"
-            ;
-        }
-
-        if(time<=0){
-            clearInterval(x);
-            document.getElementById("last").innerHTML
-                = "<p>G A M E  O V E R</p>";
-
-            $("#last").css({
-                "background" : "rgba(0,0,0,0.5)"
-            });
-
-            // 게임 끝나면 웹소켓 닫아주기
-            ws.close();
-
-            // 게임 결과 전송
-            setTimeout(function (){
-                document.getElementById("result").value = score;
-                $("#scoreForm").submit();
-            }, 2000);
-
-        }
-
-        time--;
-    }, 1000);
 </script>
+<script th:inline="javascript" th:src="@{/js/game.js}"></script>
 </body>
 </html>
