게임 포즈 추가

--- a/src/main/resources/templates/game/pose.html
+++ b/src/main/resources/templates/game/pose.html
@@ -146,7 +146,7 @@
 <!-- Core theme JS-->
 <script th:src="@{/js/scripts.js}"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-<script>
+<script th:inline="javascript">
     <!-- 카메라 크기 -->
     var w = 400, h = 480;
 
